hphp/hack/test/typecheck/safe_abstract/concrete_class_1.php.exp
ERROR: File "concrete_class_1.php", line 23, characters 19-21:
Invalid argument (Typing[4110])
  File "concrete_class_1.php", line 12, characters 26-43:
  Expected `concrete<class<A>>`
  File "concrete_class_1.php", line 3, characters 16-16:
  But got `class<A>`; implicitly defined constant `::class` is a reference to class `A`
